--- a/PinkPongKiosk/app/src/main/res/values/strings.xml
+++ b/PinkPongKiosk/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_nfc">NfcActivity</string>
-    <string name="title_activity_match_list">MatchList</string>
+    <string name="title_activity_match_list">Pink Pong</string>
 </resources>
